@@ -56,101 +56,53 @@
             <version>5.2.3</version>
         </dependency>
 
+
+        <!-- https://mvnrepository.com/artifact/tech.grasshopper/extentreports-cucumber7-adapter -->
+        <dependency>
+            <groupId>tech.grasshopper</groupId>
+            <artifactId>extentreports-cucumber7-adapter</artifactId>
+            <version>1.10.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
-
-
-
-    <!--    AFTER DEPENDENCY-->
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
+                <version>3.13.0</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <fork>true</fork>
+                    <compilerArgs>
+                        <arg>--add-opens</arg>
+                        <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
 
-            <!--            1. maven surefire plugin is for parallel testing-->
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M3</version>
+                <version>3.0.0-M5</version>
                 <configuration>
-                    <parallel>methods</parallel>
-                    <!--                    max number of browser-->
-                    <threadCount>3</threadCount>
-                    <perCoreThreadCount>false</perCoreThreadCount>
-                    <!--                    run with maximum number of browser-->
-                    <!--                    <useUnlimitedThreads>true</useUnlimitedThreads>-->
-                    <!--                    <forkCount>2</forkCount>-->
-                    <!--                    <reuseForks>true</reuseForks>-->
                     <includes>
-                        <include>**/runners/*Runner*.java</include>
+                        <include>**/*SmokeTest.java</include>
                     </includes>
-                    <testFailureIgnore>true</testFailureIgnore>
+                    <parallel>methods</parallel>
+                    <threadCount>3</threadCount>
                 </configuration>
-            </plugin>
-
-            <!--            2. maven failsafe plugin us for parallel testing -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>3.0.0-M3</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
-                        </goals>
-                        <configuration>
-                            <parallel>methods</parallel>
-                            <threadCount>3</threadCount>
-                            <perCoreThreadCount>false</perCoreThreadCount>
-                            <includes>
-                                <include>**/*Runner*.java</include>
-                            </includes>
-
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-
-            <!--            3. maven cucumber reporting plugin for generating extra reports-->
-            <plugin>
-                <groupId>net.masterthought</groupId>
-                <artifactId>maven-cucumber-reporting</artifactId>
-                <version>5.0.0</version>
-                <executions>
-                    <execution>
-                        <id>execution</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                        <configuration>
-                            <projectName>cucumber-framework</projectName>
-                            <outputDirectory>${project.build.directory}</outputDirectory>
-                            <!-- <cucumberOutput>${project.build.directory}</cucumberOutput>-->
-                            <inputDirectory>${project.build.directory}</inputDirectory>
-                            <jsonFiles>
-                                <param>**/json-reports/*.json</param>
-                            </jsonFiles><classificationFiles>->
-                            <param>sample.properties</param>
-                            <param>other.properties</param>
-                        </classificationFiles>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
-
-    <!--    BEFORE PROJECT-->
-
 
 
 </project>
